--- a/www/roze.html
+++ b/www/roze.html
@@ -139,15 +139,15 @@ ul.big_list {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='playAudio_new("audio/salame.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >شهادت حضرت عباس علیه السلام</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >عصر عاشورا</li>
+							<li onclick='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
+							<li onclick='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li onclick='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
 						</ul>
 
 					</div>
@@ -194,7 +194,7 @@ ul.big_list {
 	<div id="controls_bg"></div>
 </div>
 <script>
-	//init_audio("audio/salame.mp3");
+	//init_audio("audio/roze/0.mp3");
 
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
@@ -267,7 +267,7 @@ ul.big_list {
 		});
 		
 		
-		file = "audio/salame.mp3";
+		file = "audio/roze/0.mp3";
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 			file = "/android_asset/www/" + file;
 		}
