--- a/www/hoseinie_24.html
+++ b/www/hoseinie_24.html
@@ -19,6 +19,7 @@
     <script src="js/back_btn.js"></script>
     <script src="js/query-string.js"></script>
     <script src="js/simplebar.min.js"></script>
+    <script src="js/download.js"></script>
 	
 	<script>
 		function init() {		
