--- a/www/news.html
+++ b/www/news.html
@@ -176,7 +176,7 @@ span.date_text {
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">اخبار مرز</div>
+				<div id="header-text-2th">اخبار مهم</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
