--- a/www/roze.html
+++ b/www/roze.html
@@ -52,12 +52,17 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2');
 
 			$('.play_it').each( function(i) {
+console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.1');
 				//$(this).css("display","none");
 				var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.2');
 				if($.inArray($.md5($(this).attr('online')),temp_array) != -1)
 				{
+console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.3');
 					$(this).removeClass("need_download").addClass("downloaded");
+console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.4');
 				}
+console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.5');
 			});
 console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    3');
 
