--- a/www/roze.html
+++ b/www/roze.html
@@ -19,7 +19,7 @@
     <script src="js/back_btn.js"></script>
     <script src="js/query-string.js"></script>
     <script src="js/simplebar.min.js"></script>
-    <script src="js/download.js"></script>
+<!--    <script src="js/download.js"></script>-->
 	
 	<script>
 		function init() {		
@@ -33,22 +33,131 @@
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 /////START DOWNLOAD//////////////////////////////////////////////////////////////////////
-			if(window.localStorage.getItem('downloaded_files') == null){
-				window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
-			}
+	if(window.localStorage.getItem('downloaded_files') == null){
+		window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
+	}
 console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
-			
-			if(window.localStorage.getItem('download_address') == null){
-				
-				window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
-					function(fs) {
-						window.localStorage.setItem('download_address',fs.root.toURL());
-					}, function(e) {
-						alert('failed to get fs');
-						alert(JSON.stringify(e));
-					}
-				);
+	
+	if(window.localStorage.getItem('download_address') == null){
+		
+		window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
+			function(fs) {
+				window.localStorage.setItem('download_address',fs.root.toURL());
+			}, function(e) {
+				alert('failed to get fs');
+				alert(JSON.stringify(e));
 			}
+		);
+	}
+			
+	var temp_element;
+	function alertDismissed() {
+		// do something
+	}
+	
+	function play_or_download(URL,Extension) {
+		console.log("play_or_download URL: " + URL);
+		console.log("play_or_download Extension: " + Extension);
+
+		if (device.platform == 'iOS')
+		{
+			console.log("play_or_download IOS 1");
+			downloadPath = "cdvfile://localhost/persistent/";
+			window.localStorage.setItem('download_address',downloadPath);
+			console.log("play_or_download IOS 2");
+		}
+		
+		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+		console.log("play_or_download : " + downloadPath);
+		if(check_download(URL))
+		{
+			console.log("play_or_download : check_download");
+			var media2 = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
+			media2.play();
+		}
+		else
+		{
+			console.log("play_or_download : start_download");
+			start_download(URL,Extension);
+		}
+	}
+	
+	
+	
+	function start_download(URL,Extension) {
+		var networkState = navigator.connection.type;
+		if (networkState == Connection.NONE) {
+			navigator.notification.alert(
+				'شما برای اینکار به اینترنت نیاز دارید.\n You need internet to download this file.',  // message
+				alertDismissed,         // callback
+				'اخطار',            // title
+				'تائید'                  // buttonName
+			);
+		}
+		else{
+			return false;
+		}
+		console.log("start_download URL: " + URL);
+		console.log("start_download Extension: " + Extension);
+		
+		var FileTransfer_OBJ = new FileTransfer();
+		var uri = encodeURI(URL);
+		
+		if (device.platform == 'iOS')
+		{
+			downloadPath = "cdvfile://localhost/persistent/";
+			window.localStorage.setItem('download_address',downloadPath);
+		}
+		
+		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+		console.log("start_download : " + downloadPath);
+		
+		FileTransfer_OBJ.onprogress = function(progressEvent) {
+			if (progressEvent.lengthComputable) {
+				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
+				$('#status').html(perc + "% loaded...");
+			} else {
+				$('#status').html($('#status').html() + ".");
+			}
+		};
+		
+		FileTransfer_OBJ.download(uri, downloadPath, 
+			function(entry) {	
+				$('#status').html("done");
+				console.log("start_download : done");
+				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+				temp_array.push($.md5(URL));
+				window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));			
+			}, 
+			function(error) {
+				alert('Crap something went wrong...');	
+				alert(JSON.stringify(error));
+			},
+			true
+		);
+	}
+	
+	function check_download(URL) {
+		console.log("check_download URL: " + URL);
+		var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+		console.log("check_download Extension: " + window.localStorage.getItem('downloaded_files'));
+		if($.inArray($.md5(URL),temp_array) != -1)
+		{
+			console.log("check_download true");
+			return true;
+		}
+		else
+		{
+			console.log("check_download false");
+			return false;
+		}
+	}
+
+
+
+
+
+
 console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2');
 
 			$('.play_it').each( function(i) {
@@ -77,11 +186,17 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    3');
 				play_or_download($(this).attr('online'),"mp3");
 			});
 console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    4');
+
+
+
+
+
+
 /////START DOWNLOAD//////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 
-			init_audio();
+			//init_audio();
 			
 			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
@@ -199,7 +314,9 @@ ul.big_list li.need_download {
 
 				<div id="container">
 					<div id="main" class="">
-						<div id="status">---</div>
+						<div id="status">---</div><br/>
+						<a hred="01 download.html">sssssssss</a><br/>
+						
 						<ul class="big_list">
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/bikhavas/01.mp3" offline="audio/bikhavas/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
 							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
