--- a/www/roze.html
+++ b/www/roze.html
@@ -344,7 +344,7 @@ ul.big_list li.need_download {
 	<a href="#" id="small" >قلم</a>
 	<div id="controls_bg"></div>
 </div>
-<!--<script>-->
+<script>
 	//init_audio("audio/roze/0.mp3");
 
 	audio_Timer = $("#audioTimer");
@@ -564,6 +564,6 @@ ul.big_list li.need_download {
 		
 		Timer.html(minutes + ":" + seconds);
 	};
-<!--</script>-->
+</script>
 </body>
 </html>
