--- a/www/roze.html
+++ b/www/roze.html
@@ -35,6 +35,7 @@
 		}
 
 		function onDeviceReady() {
+			init_audio();
 			console.log("onDeviceReady");
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
