--- a/www/roze.html
+++ b/www/roze.html
@@ -26,28 +26,42 @@
 		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
+			$('#status').html("Start");
+			alert($.md5 (" String str  d"));
+			
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
 			//onDeviceReady();
 		}
 
 		function onDeviceReady() {
+			init_audio();
+			console.log("onDeviceReady");
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 /////START DOWNLOAD//////////////////////////////////////////////////////////////////////
-	if(window.localStorage.getItem('downloaded_files') == null){
-		window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
-	}
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
-	
-	if(window.localStorage.getItem('download_address') == null){
-		if (device.platform == 'iOS')
-		{
-			downloadPath = "cdvfile://localhost/persistent/";
-			window.localStorage.setItem('download_address',downloadPath);
+		$('.play_it').each( function(i) {
+			//$(this).css("display","none");
+			var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+			if($.inArray($.md5($(this).attr('online')),temp_array) != -1)
+			{
+				$(this).removeClass("need_download").addClass("downloaded");
+			}
+		});
+		$('.play_it').click( function(i) {
+			temp_element = $(this);
+			play_or_download($(this).attr('online'),"mp3");
+		});
+		
+		
+		
+		if(window.localStorage.getItem('downloaded_files') == null){
+			window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
 		}
-		else
-		{
+		
+		
+		if(window.localStorage.getItem('download_address') == null){
+			
 			window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
 				function(fs) {
 					window.localStorage.setItem('download_address',fs.root.toURL());
@@ -57,11 +71,10 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 				}
 			);
 		}
-	}
-			
-	var temp_element;
-	function alertDismissed() {
-		// do something
+
+		console.log("window.localStorage.getItem('download_address'):" + window.localStorage.getItem('download_address'));
+		console.log("window.localStorage.getItem('downloaded_files'):" + window.localStorage.getItem('downloaded_files'));
+
 	}
 	
 	function play_or_download(URL,Extension) {
@@ -70,9 +83,8 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 
 		if (device.platform == 'iOS')
 		{
-			console.log("play_or_download IOS 1");
-
-			console.log("play_or_download IOS 2");
+			downloadPath = "cdvfile://localhost/persistent/";
+			window.localStorage.setItem('download_address',downloadPath);
 		}
 		
 		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
@@ -80,8 +92,10 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 		if(check_download(URL))
 		{
 			console.log("play_or_download : check_download");
-			var media2 = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
-			media2.play();
+			
+			//playAudio_new(downloadPath);
+			var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
+			media.play();
 		}
 		else
 		{
@@ -91,7 +105,9 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 	}
 	
 	
-	
+	function alertDismissed() {
+		// do something
+	}
 	function start_download(URL,Extension) {
 		var networkState = navigator.connection.type;
 		if (networkState == Connection.NONE) {
@@ -105,6 +121,7 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 		else{
 			return false;
 		}
+		
 		console.log("start_download URL: " + URL);
 		console.log("start_download Extension: " + Extension);
 		
@@ -161,49 +178,10 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    1');
 		}
 	}
 
-
-
-
-
-
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2');
-
-			$('.play_it').each( function(i) {
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.1');
-				//$(this).css("display","none");
-				var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.2');
-				if($.inArray($.md5($(this).attr('online')),temp_array) != -1)
-				{
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.3');
-					$(this).removeClass("need_download").addClass("downloaded");
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.4');
-				}
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    2.5');
-			});
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    3');
-
-			$('.play_it').click( function(i) {
-				//$(this).css("display","none");
-				//alert($(this).attr('online'));
-				
-				//temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-				//temp_array.push($.md5($(this).attr('online')));
-				//window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));
-				temp_element = $(this);
-				play_or_download($(this).attr('online'),"mp3");
-			});
-console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    4');
-
-
-
-
-
-
 /////START DOWNLOAD//////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
-
+/*
 			//init_audio();
 			
 			//FastClick.attach(document.getElementById('container'));
@@ -214,6 +192,12 @@ console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    4');
 			}
 		
 		}
+*/
+		
+		
+		
+		
+		
 		function uniqueDeviceIDsuccess_index(uuid)
 		{
 			window.localStorage.setItem('uuid',uuid);
@@ -324,7 +308,8 @@ ul.big_list li.need_download {
 					<div id="main" class="">
 						<div id="status">---</div><br/>
 						<a href="01_download.html">sssssssss</a><br/>
-						
+						<button id="startDl" onclick="play_or_download('http://dlsmgroup.ir/temp/salameee.mp3','mp3');" >Click to Download and Play</button>
+						<br/>
 						<ul class="big_list">
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/bikhavas/01.mp3" offline="audio/bikhavas/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
 							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
@@ -380,7 +365,7 @@ ul.big_list li.need_download {
 	<a href="#" id="small" >قلم</a>
 	<div id="controls_bg"></div>
 </div>
-<script>
+<!--<script>-->
 	//init_audio("audio/roze/0.mp3");
 
 	audio_Timer = $("#audioTimer");
@@ -600,6 +585,6 @@ ul.big_list li.need_download {
 		
 		Timer.html(minutes + ":" + seconds);
 	};
-</script>
+<!--</script>-->
 </body>
 </html>
