--- a/www/roze.html
+++ b/www/roze.html
@@ -26,9 +26,7 @@
 		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
-			$('#status').html("Start");
-			alert($.md5 (" String str  d"));
-			
+			$('#status').html("Start");		
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
 			//onDeviceReady();
@@ -50,7 +48,10 @@
 		});
 		$('.play_it').click( function(i) {
 			temp_element = $(this);
-			play_or_download($(this).attr('online'),"mp3");
+			alert($(this).attr('online'));
+			
+			play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
+			//play_or_download($(this).attr('online'),"mp3");
 		});
 		
 		
