--- a/www/roze.html
+++ b/www/roze.html
@@ -33,7 +33,7 @@
 		}
 
 		function onDeviceReady() {
-			init_audio();
+			//init_audio();
 			console.log("onDeviceReady");
 /////////////////////////////////////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////
@@ -50,7 +50,7 @@
 			temp_element = $(this);
 			alert($(this).attr('online'));
 			
-			play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
+			//play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
 			//play_or_download($(this).attr('online'),"mp3");
 		});
 		
