--- a/www/roze.html
+++ b/www/roze.html
@@ -48,10 +48,10 @@
 		});
 		$('.play_it').click( function(i) {
 			temp_element = $(this);
-			alert($(this).attr('online'));
+			//alert($(this).attr('online'));
 			
 			//play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
-			//play_or_download($(this).attr('online'),"mp3");
+			play_or_download($(this).attr('online'),"mp3");
 		});
 		
 		
