--- a/www/roze.html
+++ b/www/roze.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/font.css" />
 	<link rel="stylesheet" type="text/css" href="css/simplebar.css" />
+	<link rel="stylesheet" type="text/css" href="css/progress.bar.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="js/jquery-1.11.3.min.js"></script>
@@ -23,7 +24,8 @@
 	
 	<script>
 		var temp_element;
-		
+		var progress_bar_element;
+
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 			$('#status').html("Start");		
@@ -137,6 +139,8 @@
 			window.localStorage.setItem('download_address',downloadPath);
 		}
 		
+		$('.progress-bar-parent').css("display","block");
+		
 		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
 		console.log("start_download : " + downloadPath);
 		
@@ -144,8 +148,11 @@
 			if (progressEvent.lengthComputable) {
 				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
 				$('#status').html(perc + "% loaded...");
+				//$('.progress-bar-parent').find('span').css('width','50%');
+				progress_bar_element.css('width',perc);
 			} else {
-				$('#status').html($('#status').html() + ".");
+				//$('#status').html($('#status').html() + ".");
+				progress_bar_element.css('width',progress_bar_element.width()+1);
 			}
 		};
 		
@@ -156,8 +163,9 @@
 				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
 				temp_array.push($.md5(URL));
 				window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));	
-
-				temp_element.removeClass("need_download");				
+				
+				temp_element.removeClass("need_download");
+				$('.progress-bar-parent').css("display","none");				
 			}, 
 			function(error) {
 				alert('Crap something went wrong...');	
@@ -290,6 +298,11 @@ ul.big_list li.need_download {
 </head>
 <body class="tarjome_disable" onload="init();" style="overflow:hidden;width:100%;">
 <div id="bg-top"></div><div id="bg-bottom"></div>
+<div class="progress-bar-parent">
+	<div class="progress-bar green glow">
+		<span style="width: 55%"></span>
+	</div>
+</div>
 <div id="ajax" class="mypreload">
 	<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
 	<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
@@ -314,14 +327,14 @@ ul.big_list li.need_download {
 						<div id="status">---</div><br/>
 						<ul class="big_list">
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/bikhavas/01.mp3" offline="audio/bikhavas/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" offline="audio/roze/03.mp3" play_type="offline" onclick2='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" offline="audio/roze/04.mp3" play_type="online" onclick2='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" offline="audio/roze/05.mp3" play_type="online" onclick2='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" offline="audio/roze/06.mp3" play_type="online" onclick2='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/07.mp3" offline="audio/roze/07.mp3" play_type="online" onclick2='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/08.mp3" offline="audio/roze/08.mp3" play_type="online" onclick2='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/09.mp3" offline="audio/roze/09.mp3" play_type="online" onclick2='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" offline="audio/roze/03.mp3" play_type="offline" onclick2='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" offline="audio/roze/04.mp3" play_type="online" onclick2='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" offline="audio/roze/05.mp3" play_type="online" onclick2='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" offline="audio/roze/06.mp3" play_type="online" onclick2='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/07.mp3" offline="audio/roze/07.mp3" play_type="online" onclick2='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/08.mp3" offline="audio/roze/08.mp3" play_type="online" onclick2='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/09.mp3" offline="audio/roze/09.mp3" play_type="online" onclick2='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
 						</ul>
 
 					</div>
