--- a/www/roze.html
+++ b/www/roze.html
@@ -28,7 +28,7 @@
 
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
-			$('#status').html("Start");		
+			//$('#status').html("Start");		
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
 			//onDeviceReady();
@@ -148,17 +148,18 @@
 			if (progressEvent.lengthComputable) {
 				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
 				$('#status').html(perc + "% loaded...");
-				//$('.progress-bar-parent').find('span').css('width','50%');
-				progress_bar_element.css('width',perc);
+				$('.progress-bar-parent').find('span').css('width','50%');
+				//progress_bar_element.css('width',perc);
 			} else {
-				//$('#status').html($('#status').html() + ".");
-				progress_bar_element.css('width',progress_bar_element.width()+1);
+				$('#status').html($('#status').html() + ".");
+				//progress_bar_element.css('width',progress_bar_element.width()+1);
+				$('.progress-bar-parent').find('span').css('width',$('.progress-bar-parent').find('span').width()+1);
 			}
 		};
 		
 		FileTransfer_OBJ.download(uri, downloadPath, 
 			function(entry) {	
-				$('#status').html("done");
+				$('#status').html("");
 				console.log("start_download : done");
 				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
 				temp_array.push($.md5(URL));
@@ -300,7 +301,7 @@ ul.big_list li.need_download {
 <div id="bg-top"></div><div id="bg-bottom"></div>
 <div class="progress-bar-parent">
 	<div class="progress-bar green glow">
-		<span style="width: 55%"></span>
+		<span style="width: 0%"></span>
 	</div>
 </div>
 <div id="ajax" class="mypreload">
@@ -324,7 +325,7 @@ ul.big_list li.need_download {
 
 				<div id="container">
 					<div id="main" class="">
-						<div id="status">---</div><br/>
+						<div id="status"></div>
 						<ul class="big_list">
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/bikhavas/01.mp3" offline="audio/bikhavas/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
